--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -23,7 +23,7 @@ src = "img/avatar.png"
 
 [article]
 headingAnchor = false
-math = false
+math = true
 readingTime = true
 
 [article.license]
@@ -76,7 +76,7 @@ enabled = true
 
 ## Comments
 [comments]
-enabled = true
+enabled = false
 provider = "disqus"
 
 [comments.disqusjs]
