--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,7 +10,7 @@ newtab = true
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = ""
+url = "https://github.com/Gushroom"
 
 [social.params]
 icon = "brand-github"
