--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -12,7 +12,7 @@ defaultContentLanguage = "en"
 hasCJKLanguage = false
 
 # Change it to your Disqus shortname before using
-disqusShortname = "gugugu"
+# disqusShortname = "gugugu"
 
 [pagination]
-pagerSize = 5
+pagerSize = 20
