--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -1,19 +1,19 @@
 # Configure main menu and social menu
-[[main]]
-identifier = "home"
-name = "Home"
-url = "/"
-[main.params]
-icon = "home"
-newtab = true
+# [[main]]
+# identifier = "home"
+# name = "Home"
+# url = "/"
+# [main.params]
+# icon = "home"
+# newtab = true
 
-[[social]]
-identifier = "github"
-name = "GitHub"
-url = "https://github.com/Gushroom"
+# [[social]]
+# identifier = "github"
+# name = "GitHub"
+# url = "https://github.com/Gushroom"
 
-[social.params]
-icon = "brand-github"
+# [social.params]
+# icon = "brand-github"
 
 # [[social]]
 # identifier = "twitter"
